# string_therapy_for_material_science

./: .dockerignore  .env  .env.example  .gitignore  .sesskey  Caddyfile  Dockerfile  pixi.toml  pyproject.toml  railway.json  railway.toml
_proc/: index.ipynb  nbdev.yml
deploy/age/: .env.example  Dockerfile  README.md  docker-compose.yml  railway.toml
deploy/ui/: .dockerignore  Dockerfile  docker-compose.yml
nbs/: .sesskey  01_main.ipynb  02_main.ipynb  02_tableAndCharts.ipynb  03_deploy_routes.ipynb  04_langgraph_analyst.ipynb  04_langgraph_viz.ipynb  05_scipy_analyst.ipynb  06_solubility_batch.ipynb  index.ipynb  test_working.ipynb
nbs/.ipynb_checkpoints/: 01_main-checkpoint.ipynb  02_main-checkpoint.ipynb  index-checkpoint.ipynb  test_working-checkpoint.ipynb
routes/: router_graph.json  ui_manifest.json
services/: cors_app.py  matgram_client.py  serve_all.py  serve_heatmap.py  serve_scatter.py  serve_settings.py  serve_timeseries.py
string_therapy_for_material_science/: _modidx.py  analyst_langraph.py  analyst_scipy.py  core.py  langgraph_viz.py  main.py  main01.py  solubility_batch.py  table_and_charts.py  table_workspace.py
ui/: .sesskey  app.py  chat_client.js  graph_network.html  table_client.js  viz_client.js
viz/: observablehq.config.js  package-lock.json  package.json
viz/plotly_viz/: __init__.py  encode_pass.py  latent_space_interpolation.py  molecular_structure_rendering.py  property_prediction_diagnostics.py  roundtrip_decode.py  similarity_attention_heat_map.py
viz/src/: heatmap.md  index.md  scatter.md  solubility.md  style.css  (+1 more)
(+3 files in other folders)
