[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "string_therapy_for_material_science"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Alex", email = "alixjcob559@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/alix559/string_therapy_for_material_science"
Documentation = "https://alix559.github.io/string_therapy_for_material_science/"

[project.entry-points.nbdev]
string_therapy_for_material_science = "string_therapy_for_material_science._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "string_therapy_for_material_science.__version__"}

[tool.setuptools.packages.find]
include = ["string_therapy_for_material_science"]

[tool.nbdev]
